[package]
name = "gummiworm-testzone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gummiworm = { path = "/Users/work/Code/sundae/gummiworm/gummiworm", features = ["archive_getter", "cbor_struct"] }
serde_json = "1.0.99"
tokio = { version = "1", features = ["full"] }

